# Young-Hearts-Agent-Platform

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt
apps/ai-worker/: pyproject.toml
apps/ai-worker/src/ai_worker/: __init__.py  celery_app.py
apps/ai-worker/src/ai_worker/clients/: __init__.py  dashscope_client.py  napcat_client.py  wxpusher_client.py
apps/ai-worker/src/ai_worker/pipelines/: __init__.py
apps/ai-worker/src/ai_worker/tasks/: __init__.py
apps/api-server/: pyproject.toml
apps/api-server/.github/agents/: Implementer.agent.md
apps/api-server/.github/prompts/: design-program-structure.prompt.md
apps/api-server/app/: main.py  utils_openapi.py
apps/api-server/app/api/v1/routes/: auth.py
apps/api-server/app/core/: config.py
apps/api-server/app/db/: session.py
apps/api-server/app/dependencies/: __init__.py  deps.py
apps/api-server/app/models/: __init__.py  user.py
apps/api-server/app/repositories/: __init__.py  notice_repository.py  session_repository.py  user_repository.py
apps/api-server/app/schemas/: __init__.py  user.py
apps/api-server/app/services/: auth.py  notice_service.py  tenant_service.py  user_service.py
apps/api-server/docs/: “心青年”智能体平台-技术栈设计.md  “心青年”智能体平台-数据模型与 API 设计.md  “心青年”智能体平台-项目结构.md
apps/api-server/docs/prompts-design/: 2026-01-11_CommitLens_提示词最终版.md  2026-01-11_Planner_提示词最终版.md  2026-01-11_功能文档撰写命令_提示词最终版.md  2026-01-16_Readme-Manager_提示词最终版.md
apps/api-server/docs/归档/: 2025-12-27-“心青年”智能体平台-功能文档.md  2025-12-28-“心青年”智能体平台-项目结构.md
apps/api-server/docs/归档/01/02-后端用户身份控制/: 2026-01-17_前端已携带session_id但403_研究报告.md
apps/api-server/docs/归档/01/03-密码长度限制报错/: 2026-01-17_密码长度限制报错_研究报告.md
apps/api-server/docs/归档/01/05-分角色注册功能/: 2026-01-16_分角色注册功能_研究报告.md
apps/api-server/docs/归档/01/07-密码哈希算法迁移/: 2026-01-17_密码哈希算法迁移_实现计划.md
apps/api-server/docs/归档/01/08-用户模型roles字段JSON化/: 2026-01-17_用户模型roles字段JSON化_研究报告.md
apps/api-server/scripts/: init_db.py
apps/api-server/tests/: test_health.py  test_users.py
backend/: .gitignore  README.md  dev.db  openapi.json  package.json
frontend/: .env  .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: start.py  start_api.py  start_web.py  start_worker.py
tests/: conftest.py
规范/: 单体仓库全栈项目启动脚本规范 (Monorepo Fullsta.md  智院灵枢(SAP)-日志规范.md  (+2 more)
(+319 files in other folders)
