[project]
name = "young-hearts-agent-platform"
version = "0.1.0"
description = "心青年智能体平台 - Hybrid Monorepo"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "apps/api-server",
    "apps/ai-worker",
    "packages/py-config",
    "packages/py-db",
    "packages/py-schemas",
    "packages/py-auth",
    "packages/py-ai-engine",
    "packages/py-logger",
    "packages/py-messaging",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "D", "ANN"]
ignore = ["D400", "D415", "ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests", "apps/*/tests", "packages/*/tests"]
asyncio_mode = "auto"
