[project]
name = "young-hearts-agent-platform-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi==0.128.0",
    "httpx>=0.28.1",
    "passlib==1.7.4",
    "pydantic==2.12.5",
    "pydantic_settings==2.12.0",
    "pymysql>=1.1.2",
    "pytest>=9.0.2",
    "python_jose==3.5.0",
    "SQLAlchemy==2.0.45",
    "uvicorn>=0.40.0",
]
