[project]
name = "young-hearts-api-server"
version = "0.1.0"
description = "FastAPI 网关 - 认证、业务 API、任务调度"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128",
    "uvicorn>=0.40",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    "sqlalchemy>=2.0",
    "argon2-cffi>=25.1",
    "passlib>=1.7",
    "python-jose>=3.5",
    "pymysql>=1.1",
    "httpx>=0.28",
    "py-config",
    "py-db",
    "py-schemas",
    "py-auth",
    "py-logger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
